<?php die(); ?>
Akeeba Panopticon 1.0.6
================================================================================
+ Site notes [gh-363]
~ Translations now use PO files instead of a third party service
~ Light and Dark Mode for the TinyMCE and ACE editors
# [HIGH] Wrong assignment of sites to groups if there are gaps in numbering [gh-360]

Akeeba Panopticon 1.0.5
================================================================================
+ Scheduled Available Update Summary Emails [gh-301]
+ Detect stuck extension updates and allow rescheduling, or canceling [gh-304]
+ Allow immediate email sending [gh-306]
+ Allow the global update preference of an extension to be "email" [gh-309]
+ Detect when scheduled tasks are falling behind [gh-315]
+ Site configuration management CLI commands [gh-153]
+ Collection and display of basic server information [gh-307]
+ Per-user language preference [gh-326]
+ Groups act as tags for site filtering [gh-333]
+ Automatic API data sanitization [gh-341]
~ Strip HTML tags from extension names, and their author names [gh-349]
# [LOW] Test email message showed %s instead of the Panopticon URL
# [LOW] Can't create a group without permissions [gh-335]
# [LOW] Work around possible deadlocks trying to save site or extension information

Akeeba Panopticon 1.0.4
================================================================================
+ Site reports (updates, backups, file scanner, Admin Tools actions) [gh-220]
+ Support for custom templates [gh-249]
+ Send test email [gh-267]
+ Major performance improvement for scheduled tasks
+ Extension list search box [gh-247]
- Removed avatars
# [MEDIUM] Repeated notifications for updates if more than one extension with updates is found [gh-258]
# [MEDIUM] Cannot access My Profile page [gh-241]
# [MEDIUM] PHP error in the Extensions Updates page if you have extensions with missing Download Keys [gh-240]
# [HIGH] Post-update code does not apply database changes [gh-283]
